# span_labeling

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: lint.yaml
span_labeling/: base.py  config.py  config.yaml  constrained_processor.py  constrained_vllm_server.py  create_test_data.py  dataset.py  error_analysis.py  evaluate_results.py  export_results.py  hf_api.py  hf_api_logits_processor.py  main.py  metrics.py  prompt_utils.py  registry.py  results.py  run.py  run_async.py  run_experiment.py  run_experiments.py
span_labeling/configs/: base.yaml
span_labeling/configs/constrained/: gemma_4_31b_constrained_fixed_ner_multigec.yaml  gemma_4_31b_constrained_fixed_wmt_synthetic.yaml  gemma_4_31b_thinking_constrained_fixed_ner_multigec.yaml  gemma_4_31b_thinking_constrained_fixed_wmt_synthetic.yaml  qwen3_8b_constrained_fixed_ner_multigec.yaml  qwen3_8b_constrained_fixed_wmt_synthetic.yaml  qwen3_8b_thinking_constrained_fixed_ner_multigec.yaml  qwen3_8b_thinking_constrained_fixed_wmt_synthetic.yaml
span_labeling/configs/gemma_4_31b/: gemma_4_31b_constrained_ner_multigec.yaml  gemma_4_31b_constrained_wmt_synthetic.yaml  gemma_4_31b_ner_multigec.yaml  gemma_4_31b_thinking_constrained_ner_multigec.yaml  gemma_4_31b_thinking_constrained_wmt_synthetic.yaml  gemma_4_31b_thinking_ner_multigec.yaml  gemma_4_31b_thinking_wmt_synthetic.yaml  gemma_4_31b_wmt_synthetic.yaml  gemma_4_test_constrained.yaml
span_labeling/configs/gpt_5_mini/: gpt_5_mini_ner_multigec.yaml  gpt_5_mini_wmt_synthetic.yaml
span_labeling/configs/hermes/: hermes_8b_constrained_ner_multigec.yaml  hermes_8b_constrained_wmt_synthetic.yaml  hermes_8b_ner_multigec.yaml  hermes_8b_wmt_synthetic.yaml
span_labeling/configs/llama_3_70b/: llama_3_70b_constrained_ner_multigec.yaml  llama_3_70b_constrained_wmt_synthetic.yaml  llama_3_70b_ner_multigec.yaml  llama_3_70b_wmt_synthetic.yaml
span_labeling/configs/mistral_7b/: mistral_7b_constrained_ner_multigec.yaml  mistral_7b_constrained_wmt_synthetic.yaml  mistral_7b_ner_multigec.yaml  (+1 more)
span_labeling/datasets/: convert_data.py  dataset_groups.py
span_labeling/experiments/: run.py
span_labeling/jobs/: submit.py
span_labeling/methods/: __init__.py  constrained_json_method.py  constrained_xml_method.py  index_method.py  json_method.py  occurrence_method.py  span_labeler.py  xml_method.py
span_labeling/modeling/: model.py  openai_model.py  vllm_model.py
span_labeling/prompts/: index.yaml  json.yaml  json_occurrence.yaml  occurrence.yaml  xml.yaml
(+24 files in other folders)
