[project]
name = "span-labeling"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.10.1",
    "bitsandbytes>=0.49.0",
    "codebase-to-text>=1.2",
    "fire>=0.7.1",
    "flashinfer-python>=0.5.2",
    "huggingface-hub>=0.36.0",
    "ipykernel>=6.30.1",
    "mistral-common[audio,hf-hub,image,sentencepiece,server]>=1.8.5",
    "nbformat>=5.10.4",
    "ollama>=0.6.0",
    "openai>=2.1.0",
    "outlines>=1.2.7",
    "pandas>=2.3.3",
    "plotly>=5.24.0",
    "pydantic-settings>=2.11.0",
    "sentencepiece>=0.2.1",
    "torch>=2.8.0",
    "vllm>=0.11.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "ruff>=0.14.1",
]
